# synq-landing

./: CLAUDE.md  PRD.md  README.md  hamza-plan.md  plan.md  roadmap-brief.md
.claude/agents/: brand-designer.md
.claude/rules/: crew-delegation.md  crew-enforcement.md  crew-workflow.md
.pixl/: project.json
backend/: .env.example  .gitignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  base.py  note.py  user.py
backend/app/routes/: auth.py
backend/app/schemas/: __init__.py  auth.py
backend/app/utils/: auth.py
backend/tests/: conftest.py  test_auth.py  test_auth_utils.py  test_models.py
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/strategy/: page.tsx
frontend/src/components/: advantage.tsx  capabilities.tsx  case-studies.tsx  faq.tsx  footer-cta.tsx  hero.tsx  how-we-work.tsx  navbar.tsx  pricing.tsx  problem.tsx  tech-stack.tsx
